Fixed responsiveness on mobile devices added flex:shrink attribute on all web page divs

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -129,7 +129,7 @@ body {
 
 .content-header-2 > div img {
   flex: 1;
-  width: 550px;
+  max-width: 100%;
   object-fit: contain;
 }
 
